fixed grid on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -131,7 +131,7 @@ img[src$=".svg"] {
 } 
 
 .menu-img {
-  width: 300px;
+  max-width: 300px;
   height: 300px;
   object-fit: cover;
   border-radius: 12px;
@@ -140,13 +140,23 @@ img[src$=".svg"] {
 
 .menu-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr))
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))
 }
 
 .menu-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.item-text {
+  display:flex;
+  flex-wrap: wrap;
+  max-width: 300px;
+}
+
+.item-price {
+  margin-left: auto;
 }
 
 .home-img:nth-of-type(3) {
@@ -191,5 +201,19 @@ img[src$=".svg"] {
     width: 100%;
     padding: 0;
     outline: 3px solid rgba(9, 18, 24, 0.33);
+  }
+
+
+
+  .menu-item {
+  }
+
+  .menu-img {
+    width: 240px;
+    height: 240px;
+  }
+
+  .item-text {
+    width: 240px;
   }
 }
